--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,12 +61,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+     - family: Lato
+       fonts:
+         - asset: fonts/Lato-Black.ttf
+         - asset: fonts/Lato-Blackitalic.ttf
+           style: italic
+         - asset: fonts/Lato-Black.ttf
+         - asset: fonts/Lato-Blackitalic.ttf
+           style: italic
+         - asset: fonts/Lato-Regular.ttf
+         - asset: fonts/Lato-Italic.ttf
+           style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
