--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.11.3+16
+  geolocator: ^5.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
