--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   http: ^0.11.3+16
   geolocator: ^5.3.1
+  progress_indicators: ^0.1.5
 
 
   # The following adds the Cupertino Icons font to your application.
