Restaurants Distanz berechnen und Update der Liste optimiert + Bugfixes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   http: ^0.11.3+16
   geolocator: ^5.3.1
+  permission_handler: ^5.0.0+hotfix.6
+
 
 
   # The following adds the Cupertino Icons font to your application.
