QRCode Scanner hinzugefügt, eigene Page und Routing erstellt

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   permission_handler: ^5.0.0+hotfix.6
   progress_indicators: ^0.1.5
   font_awesome_flutter: ^8.8.1
+  qr_code_scanner: ^0.0.13
 
 
   # The following adds the Cupertino Icons font to your application.
