--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   progress_indicators: ^0.1.5
   font_awesome_flutter: ^8.8.1
   qr_code_scanner: ^0.0.13
-  google_maps_flutter: ^0.5.27+3
+  google_maps_flutter: ^0.5.28+1
+  vector_math: ^2.0.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
