--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   google_maps_flutter: ^0.5.28+1
   vector_math: ^2.0.8
   keyboard_actions: ^3.2.1+1
+  mailer: ^3.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
