--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   vector_math: ^2.0.8
   keyboard_actions: ^3.2.1+1
   mailer: ^3.0.4
+  square_in_app_payments: 1.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
